CMAKE_MINIMUM_REQUIRED(VERSION 3.13)

PROJECT(MatchThree VERSION 1.0.0)

SET(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs" FORCE)
IF(DEFINED CMAKE_BUILD_TYPE AND CMAKE_VERSION VERSION_GREATER "2.8")
  SET_PROPERTY(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS  ${CMAKE_CONFIGURATION_TYPES})
ENDIF()

# Build flags
IF(MSVC)
    ADD_COMPILE_OPTIONS("/W4" "$<$<CONFIG:RELEASE>:/O2>")
ELSE()
    ADD_COMPILE_OPTIONS("-Wall" "$<$<CONFIG:RELEASE>:-O2>")
    IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
        ADD_COMPILE_OPTIONS("-stdlib=libc++")
    ELSE()
        # No thing special for GCC
    ENDIF()
ENDIF()

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED YES)

ADD_SUBDIRECTORY(src)
